Fix post overlay z-index over navigation

--- a/src/post/style.css
+++ b/src/post/style.css
@@ -7,6 +7,7 @@
     height: 100vh;
     overflow: auto;
     background: transparent;
+    z-index: 1;
 }
 
 .post-container.is-showing-larger-image {}
